# multi-agent-code-analysis

./: .gitignore  README.md  requirements.txt
backend/: database.py  git_handler.py  main.py  models.py  pyproject.toml
backend/src/backend/: crud.py  main.py
backend/src/backend/core/: config.py
backend/src/backend/handlers/: git_summary_handler.py  repo_handler.py  subdir_handler.py  zip_handler.py
backend/src/backend/output/: analysis_result.json
backend/src/backend/report_gen_engines/: git_scrap_data_advanced.py  git_scrap_data_basic.py  language_engine.py
backend/src/backend/research_crew/: pyproject.toml
backend/src/backend/research_crew/src/research_crew/: crew.py  main.py
backend/src/backend/research_crew/src/research_crew/config/: agents.yaml  tasks.yaml
backend/src/multiagent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: app.py  style.css
frontend/src/frontend/: session_state.py  ui_helpers.py
testing/: test_db.py  test_git.py
